# ffmpegMac

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build-macos-bundles.sh  run-rust-tests.mjs  run-tauri.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/core/: job.js
src/main/: main.js  preload.cjs  preload.js
src/renderer/: index.html  renderer.js  styles.css  tauri-bridge.js
test/: floating-feedback.test.js  job.test.js  layout-overflow.test.js  preload-bridge.test.js  workflow-layout.test.js
