[package]
name = "ffmpeg_gui_tauri"
version = "0.2.0"
edition = "2021"
description = "FFmpeg visual controller built with Tauri + Rust"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
once_cell = "1.21"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
strip = true
